add call to action button

--- a/index.html
+++ b/index.html
@@ -580,13 +580,28 @@
 </section>
 
 
+<!-- Call to Action Section -->
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column has-text-centered">
+        <a href="https://arxiv.org/abs/2412.18431" target="_blank" class="button is-large cta-button">
+          <span class="icon">
+            <i class="ai ai-arxiv"></i>
+          </span>
+          <span>Read our paper for more technical details and results</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
 
 
   <!--BibTeX citation -->
-  <section class="section is-light" id="BibTeX">
+  <section class="section hero is-light" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{shen2024gear,
