shorter call to action

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
           <span class="icon">
             <i class="ai ai-arxiv"></i>
           </span>
-          <span>Read our paper for more technical details</span>
+          <span>Read our paper</span>
         </a>
       </div>
     </div>
